Remove minor code inspection warnings
* use Byte#valueOf instead of new Byte
* unused import
* use `L` instead of `l` for longs